@@ -13,12 +13,16 @@
 #   See the License for the specific language governing permissions and
 #   limitations under the License.
 
-mxCompare <- function(base, comparison, digits = 3, all = FALSE) {
+mxCompare <- function(base, comparison, ..., transform = signif, digits = 3, all = FALSE) {
 	if (missing(base)) {
 		stop("'base' argument be a MxModel object or list of MxModel objects")	
 	}
 	if (missing(comparison)) {
 		stop("'comparison' argument be a MxModel object or list of MxModel objects")	
+	}
+	garbageArguments <- list(...)
+	if (length(garbageArguments) > 0) {
+		stop("mxCompare does not accept values for the '...' argument")
 	}
 	if (length(digits) != 1 || is.numeric(digits) == FALSE || is.na(digits) == TRUE) {
 		stop("'digits' argument must be a numeric value")
@@ -41,20 +45,21 @@ mxCompare <- function(base, comparison, digits = 3, all = FALSE) {
 	}
 	baseSummaries <- omxLapply(base, summary)	
 	compareSummaries <- omxLapply(comparison, summary)
-	resultsTable <- showFitStatistics(baseSummaries, compareSummaries, digits, all)
+	resultsTable <- showFitStatistics(baseSummaries, compareSummaries, transform, digits, all)
 	return(resultsTable)
 }
 
-showFitStatistics <- function(baseSummaries, compareSummaries, digits, all) {
+showFitStatistics <- function(baseSummaries, compareSummaries, transform, digits, all) {
 	statistics <- list()
 	if(all) {
 		for(i in 1:length(baseSummaries)) {
 			nextBaseSummary <- baseSummaries[[i]]
-			statistics[[length(statistics) + 1]] <- collectBaseStatistics(nextBaseSummary, digits)
+			statistics[[length(statistics) + 1]] <- collectBaseStatistics(nextBaseSummary, 
+				transform, digits)
 			for(j in 1:length(compareSummaries)) {
 				nextCompareSummary <- compareSummaries[[j]]
 				statistics[[length(statistics) + 1]] <- collectStatistics(nextBaseSummary,
-					nextCompareSummary, digits)
+					nextCompareSummary, transform, digits)
 			}
 		}
 	} else {
@@ -66,10 +71,11 @@ showFitStatistics <- function(baseSummaries, compareSummaries, digits, all) {
 			nextBaseSummary <- baseSummaries[[nextBaseSummaryIndex]]
 			nextCompareSummary <- compareSummaries[[nextCompareSummaryIndex]]
 			if (previousBaseSummaryIndex != nextBaseSummaryIndex) {
-				statistics[[length(statistics) + 1]] <- collectBaseStatistics(nextBaseSummary, digits)
+				statistics[[length(statistics) + 1]] <- collectBaseStatistics(nextBaseSummary,
+					transform, digits)
 			}
 			statistics[[length(statistics) + 1]] <- collectStatistics(nextBaseSummary,
-				nextCompareSummary, digits)
+				nextCompareSummary, transform, digits)
 			previousBaseSummaryIndex <- nextBaseSummaryIndex
 		}
 	}
@@ -77,14 +83,14 @@ showFitStatistics <- function(baseSummaries, compareSummaries, digits, all) {
 	return(statistics)
 }
 
-collectBaseStatistics <- function(refSummary, digits) {
+collectBaseStatistics <- function(refSummary, transform, digits) {
 	baseStats <- data.frame(stringsAsFactors = FALSE,
 		refSummary$modelName,
 		as.character(NA),
 		refSummary$estimatedParameters,
-		signif(refSummary$Minus2LogLikelihood, digits),
+		transform(refSummary$Minus2LogLikelihood, digits),
 		refSummary$degreesOfFreedom,
-		signif(refSummary$AIC.Mx, digits),
+		transform(refSummary$AIC.Mx, digits),
 		as.numeric(NA),
 		as.numeric(NA), 
 		as.numeric(NA))
@@ -92,17 +98,17 @@ collectBaseStatistics <- function(refSummary, digits) {
 	return(baseStats)
 }
 
-collectStatistics <- function(refSummary, otherSummary, digits) {
+collectStatistics <- function(refSummary, otherSummary, transform, digits) {
 	otherStats <- data.frame(stringsAsFactors = FALSE,
 		refSummary$modelName,
 		otherSummary$modelName,
 		otherSummary$estimatedParameters,
-		signif(otherSummary$Minus2LogLikelihood, digits),
+		transform(otherSummary$Minus2LogLikelihood, digits),
 		otherSummary$degreesOfFreedom,
-		signif(otherSummary$AIC.Mx, digits),
-		signif(otherSummary$Minus2LogLikelihood - refSummary$Minus2LogLikelihood, digits),
+		transform(otherSummary$AIC.Mx, digits),
+		transform(otherSummary$Minus2LogLikelihood - refSummary$Minus2LogLikelihood, digits),
 		otherSummary$degreesOfFreedom - refSummary$degreesOfFreedom, 
-		signif(pchisq(otherSummary$Minus2LogLikelihood - refSummary$Minus2LogLikelihood,
+		transform(pchisq(otherSummary$Minus2LogLikelihood - refSummary$Minus2LogLikelihood,
 			otherSummary$degreesOfFreedom - refSummary$degreesOfFreedom, lower.tail=FALSE), digits))
 	names(otherStats) <- c("base", "comparison", "ep", "minus2LL", "df", "AIC", "diffLL", "diffdf", "p")
 	return(otherStats)
